# shoptera-product-intelligence

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: publish-mcp.yml
adapters/chatgpt/: instructions.md  openapi.yaml
adapters/claude-code/: SKILL.md  mcp-config.json  merchant-mcp-config.json
adapters/codex/: AGENTS.md
adapters/cursor/: mcp-config.json  merchant-mcp-config.json
adapters/gemini/: GEMINI.md
adapters/generic/: http-examples.md
adapters/ucp/: profile-example.json
adapters/windsurf/: mcp-config.json
api/: merchant-reference.md  openapi.yaml  reference.md
api/examples/: cart-actions.md  gtin-ean-lookup.md  keyword-search.md  semantic-search.md
capabilities/: cart-actions.md  data-coverage.md  merchant-workflows.md  product-search.md  ucp-integration.md
